fizemos o deletar dos eventos

--- a/eventplus/src/Components/FormComponents/FormComponents.css
+++ b/eventplus/src/Components/FormComponents/FormComponents.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: Poppins-Regular;
-    src: url(../../Assets/Poppins-Regular.ttf);
+    src: url(../../Assets/Poppins/Poppins-Regular.ttf);
 }
 
 .input-component {
