--- a/hello/src/App.css
+++ b/hello/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.App-dark {
+  background-color: black;
+  color: white;
+  width: 100vw;
+  height: 100vh;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
